--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
             <!-- Current cit 5 day forecast will go here -->
         </div>
     </div>
-</body>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
-<script type="text/javascript" scr="./assets/js/script.js"></script>
+<script type="text/javascript" src="./assets/js/script.js"></script>
+</body>
 
 </html>
