--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
             <button class="btn btn-outline-primary my-2" style="width: 100%" type="submit" id="clear-button">Clear History</button>
             <div class="border-top border-primary" id="past-searches">
+                past-searches
 
             </div>
         </div>
@@ -33,7 +34,7 @@
             <div class="row" id="currentConditions"></div>
             <!-- current city current weather -->
             <div class="row" id="fiveDayForecastHeader"></div>
-            <div class="d-flex flex-row flex-wrap justify-content-between" id="fiveDayForecat"></div>
+            <div class="d-flex flex-row flex-wrap justify-content-between" id="fiveDayForecast"></div>
             <!-- Current cit 5 day forecast will go here -->
         </div>
     </div>
